Squash / 0 Bug; Add Error Msg

--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,7 @@ button:focus {
     flex-direction: column;
     align-items: space-around;
 }
+
+#error {
+    text-align: center;
+}
